Add file pickers, styling and logic

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,18 +3,61 @@
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
         <meta name="viewport" content="width=device-width">
-        <meta name="format-detection" content="telephone=no">
-        <title>title</title>
-        <link rel="stylesheet" href="css/styles.css">
-        <script src="js/scripts.js"></script>
+        <title>Conversion</title>
     <body>
-        <table>
-            <tr>
-                <td>
-                    <p class="paragraph" style="text-decoration: underline;">content2</p>
-                    <img src="img/tempest_logo.png"/>
-                </td>
-            </tr>
-        </table>
+
+        <div class="file-pickers">
+            <div class="file-picker" data-from="xlsx" data-to="csv">
+
+                <h2 class="file-picker__title">
+                    XLSX to CSV
+                </h2>
+
+                <input type="file"
+                       name="file-picker__input--xls"
+                       id="file-picker__input--xls"
+                       class="file-picker__input"
+                       accept=".xlsx"
+                       multiple />
+
+                <label for="file-picker__input--xls"
+                       class="file-picker__label">
+
+                    <span class="file-picker__label__text">
+                        <span class="text--bold">Choose a file</span> or drag it here
+                    </span>
+
+                </label>
+
+                <div class="file-picker__files"></div>
+
+            </div>
+
+            <div class="file-picker" data-from="csv" data-to="xlsx">
+
+                <h2 class="file-picker__title">
+                    CSV to XLSX
+                </h2>
+
+                <input type="file"
+                    name="file-picker__input--csv"
+                    id="file-picker__input--csv"
+                    class="file-picker__input"
+                    accept=".csv"
+                    multiple />
+
+                <label for="file-picker__input--csv"
+                    class="file-picker__label">
+
+                    <span class="file-picker__label__text">
+                        <span class="text--bold">Choose a file</span> or drag it here
+                    </span>
+
+                </label>
+
+                <div class="file-picker__files"></div>
+
+            </div>
+        </div>
     </body>
 </html>
